--- a/public/index.html
+++ b/public/index.html
@@ -43,11 +43,11 @@
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
           navigator.serviceWorker.register('worker.js').then(function (registration) {
-            console.log('Worker registration successful', registration.scope);
+          // Registration was successful
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
           }, function (err) {
-            console.log('Worker registration failed', err);
-          }).catch(function (err) {
-            console.log(err);
+            // registration failed :(
+            console.log('ServiceWorker registration failed: ', err);
           });
         });
       } else {
